--- a/index.html
+++ b/index.html
@@ -1,303 +1,338 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Vegetarian High-Protein Weekly Menu</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    margin: auto;
-    padding: 1rem;
-    background: #f7f9fc;
-    color: #333;
-  }
-  h1 {
-    text-align: center;
-    margin-bottom: 0.5rem;
-  }
-  /* Modern swirling veggies animation styles */
-  .swirl-container {
-    position: relative;
-    width: 220px;
-    height: 220px;
-    margin: 0.5rem auto 2rem;
-    perspective: 800px;
-  }
-  .swirl-container svg {
-    position: absolute;
-    width: 45px;
-    height: 45px;
-    filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    animation-iteration-count: infinite;
-  }
-  .veg1 {
-    top: 88px;
-    left: 88px;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 0s;
-  }
-  .veg2 {
-    top: 40px;
-    left: 140px;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 1.66s;
-  }
-  .veg3 {
-    top: 10px;
-    left: 80px;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 3.33s;
-  }
-  .veg4 {
-    top: 40px;
-    left: 20px;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 5s;
-  }
-  .veg5 {
-    top: 88px;
-    left: 0;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 6.66s;
-  }
-  .veg6 {
-    top: 140px;
-    left: 40px;
-    animation: swirlOrbit 10s linear infinite;
-    animation-delay: 8.33s;
-  }
-  @keyframes swirlOrbit {
-    0% {
-      transform: rotateY(0deg) translateZ(80px) scale(1);
-      opacity: 1;
-      filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Advanced Vegetarian Weekly Menu</title>
+  <style>
+    /* Reset & basics */
+    *, *::before, *::after {
+      box-sizing: border-box;
     }
-    50% {
-      transform: rotateY(180deg) translateZ(80px) scale(0.7);
-      opacity: 0.6;
-      filter: drop-shadow(0 0 2px rgba(0,0,0,0.05));
+    body, html {
+      margin: 0; padding: 0;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background: #111;
+      color: #eee;
+      overflow-y: scroll;
+      scroll-behavior: smooth;
     }
-    100% {
-      transform: rotateY(360deg) translateZ(80px) scale(1);
-      opacity: 1;
-      filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
-    }
-  }
 
-  /* Menu styling */
-  section {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
-    padding: 1rem 1.5rem;
-    margin-bottom: 2rem;
-  }
-  h2 {
-    color: #2c3e50;
-    border-bottom: 2px solid #3498db;
-    padding-bottom: 0.25rem;
-  }
-  h3 {
-    margin-top: 1rem;
-    color: #2980b9;
-  }
-  ul {
-    margin-top: 0.25rem;
-    padding-left: 1.2rem;
-  }
-  li {
-    margin-bottom: 0.3rem;
-  }
-  @media (max-width: 400px) {
-    body {
-      padding: 0.5rem;
+    /* Navbar */
+    header {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      height: 64px;
+      background: rgba(17, 17, 17, 0.85);
+      backdrop-filter: saturate(180%) blur(12px);
+      display: flex;
+      align-items: center;
+      padding: 0 2rem;
+      font-weight: 700;
+      font-size: 1.5rem;
+      z-index: 10000;
+      letter-spacing: 2px;
+      user-select: none;
+      color: #fafafa;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.5);
     }
-  }
-</style>
+
+    /* Nav dots on right */
+    nav {
+      position: fixed;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      z-index: 9999;
+    }
+
+    nav a {
+      display: block;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: #777;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+      box-shadow: 0 0 6px rgba(0,0,0,0.3);
+    }
+
+    nav a.active,
+    nav a:hover {
+      background: #1abc9c;
+      box-shadow: 0 0 10px #1abc9c;
+    }
+
+    /* Section styling */
+    section.day {
+      position: relative;
+      height: 100vh;
+      width: 100%;
+      overflow: hidden;
+      scroll-margin-top: 64px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fafafa;
+      text-shadow: 0 0 8px rgba(0,0,0,0.7);
+    }
+
+    /* Parallax Background */
+    section.day::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      filter: brightness(0.55);
+      transform: translateZ(0);
+      will-change: transform;
+      z-index: -1;
+      transition: transform 0.2s ease-out;
+    }
+
+    /* Content box */
+    .content {
+      max-width: 640px;
+      background: rgba(0,0,0,0.45);
+      padding: 2rem 3rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 0.9s ease, transform 0.9s ease;
+      user-select: none;
+    }
+    .content.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .content h2 {
+      margin-top: 0;
+      font-weight: 900;
+      font-size: 3.8rem;
+      letter-spacing: 3px;
+      margin-bottom: 1.2rem;
+      font-family: 'Segoe UI Black', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .content ul {
+      list-style: none;
+      padding: 0;
+      font-size: 1.4rem;
+      line-height: 1.7;
+    }
+    .content ul li {
+      margin-bottom: 1rem;
+      padding-left: 1.1rem;
+      position: relative;
+    }
+    .content ul li::before {
+      content: "✓";
+      position: absolute;
+      left: 0;
+      color: #1abc9c;
+      font-weight: bold;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .content {
+        padding: 1.5rem 2rem;
+      }
+      .content h2 {
+        font-size: 2.6rem;
+      }
+      .content ul li {
+        font-size: 1.2rem;
+      }
+      nav {
+        right: 12px;
+        gap: 14px;
+      }
+      nav a {
+        width: 12px;
+        height: 12px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Vegetarian High-Protein Weekly Menu</h1>
 
-  <div class="swirl-container" aria-label="Swirling vegetables animation" role="img" aria-live="polite" aria-atomic="true">
-    <!-- Carrot SVG -->
-    <svg class="veg1" viewBox="0 0 64 64" fill="#FFA500" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path d="M12 52 L40 24 L44 28 L16 56z"/>
-      <path fill="#228B22" d="M40 24 L44 28 L48 12 L44 8z"/>
-    </svg>
+<header>VEGETARIAN MENU</header>
 
-    <!-- Broccoli SVG -->
-    <svg class="veg2" viewBox="0 0 64 64" fill="#228B22" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <circle cx="32" cy="24" r="12"/>
-      <rect x="28" y="36" width="8" height="20"/>
-    </svg>
+<nav aria-label="Day navigation">
+  <a href="#day1" aria-label="Go to Day 1" class="active"></a>
+  <a href="#day2" aria-label="Go to Day 2"></a>
+  <a href="#day3" aria-label="Go to Day 3"></a>
+  <a href="#day4" aria-label="Go to Day 4"></a>
+  <a href="#day5" aria-label="Go to Day 5"></a>
+  <a href="#day6" aria-label="Go to Day 6"></a>
+  <a href="#day7" aria-label="Go to Day 7"></a>
+</nav>
 
-    <!-- Bell Pepper SVG -->
-    <svg class="veg3" viewBox="0 0 64 64" fill="#FF6347" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <ellipse cx="32" cy="32" rx="14" ry="20"/>
-      <rect x="26" y="10" width="12" height="6" rx="3" ry="3"/>
-    </svg>
-
-    <!-- Tomato SVG -->
-    <svg class="veg4" viewBox="0 0 64 64" fill="#e34234" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <circle cx="32" cy="32" r="14"/>
-      <path fill="#228B22" d="M20 18 L24 10 L40 10 L44 18z"/>
-    </svg>
-
-    <!-- Peas SVG -->
-    <svg class="veg5" viewBox="0 0 64 64" fill="#6ab04c" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <circle cx="22" cy="32" r="6"/>
-      <circle cx="32" cy="32" r="6"/>
-      <circle cx="42" cy="32" r="6"/>
-    </svg>
-
-    <!-- Corn SVG -->
-    <svg class="veg6" viewBox="0 0 64 64" fill="#f6e58d" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <rect x="28" y="8" width="8" height="48" rx="4" ry="4"/>
-      <path fill="#ffb142" d="M30 12 L34 12 L34 44 L30 44z"/>
-    </svg>
-  </div>
-
-  <section>
+<section id="day1" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1512621776951-a57141f2eefd?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 1</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Protein shake (1.5 scoops plant protein + almond milk + banana)</li>
-      <li>Oats + chia seeds + almonds</li>
+      <li>Protein shake (plant protein + almond milk + banana)</li>
+      <li>Oats with chia seeds and almonds</li>
+      <li>Quinoa & Lentil curry</li>
+      <li>Tofu stir-fry with brown rice and broccoli</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Quinoa (1.5 cups cooked)</li>
-      <li>Lentil curry (1.5 cups cooked lentils)</li>
-      <li>Mixed veggies</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Tofu stir-fry (150g tofu)</li>
-      <li>Brown rice (1 cup cooked)</li>
-      <li>Steamed broccoli</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day2" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1505253210343-1b8a4d282f0f?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 2</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Greek yogurt (200g) + mixed berries + walnuts</li>
-      <li>Protein shake (1 scoop plant protein + almond milk)</li>
+      <li>Greek yogurt with mixed berries and walnuts</li>
+      <li>Chickpea and spinach stew with bulgur wheat</li>
+      <li>Tempeh sauté with bell peppers and quinoa</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Chickpea and spinach stew (1.5 cups cooked chickpeas)</li>
-      <li>Bulgur wheat (1.5 cups cooked)</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Tempeh sauté (150g) with bell peppers</li>
-      <li>Quinoa (1 cup cooked)</li>
-      <li>Roasted asparagus</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day3" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1506084868230-bb9d95c24759?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 3</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Protein shake (1.5 scoops plant protein + almond milk + mango)</li>
-      <li>Whole grain toast + peanut butter (2 tbsp)</li>
+      <li>Protein shake (plant protein + almond milk + mango)</li>
+      <li>Whole grain toast with peanut butter</li>
+      <li>Black bean chili with brown rice</li>
+      <li>Paneer tikka with couscous and green beans</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Black bean chili (1.5 cups cooked black beans)</li>
-      <li>Brown rice (1.5 cups cooked)</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Paneer tikka (150g paneer)</li>
-      <li>Couscous (1 cup cooked)</li>
-      <li>Steamed green beans</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day4" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 4</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Greek yogurt (200g) + oats + flaxseeds + almonds</li>
+      <li>Greek yogurt with oats, flaxseeds & almonds</li>
+      <li>Red kidney bean salad with quinoa and mixed greens</li>
+      <li>Tofu vegetable curry with brown rice and carrots</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Red kidney bean salad (1.5 cups cooked kidney beans)</li>
-      <li>Quinoa (1.5 cups cooked)</li>
-      <li>Mixed greens</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Tofu and vegetable curry (150g tofu)</li>
-      <li>Brown rice (1 cup cooked)</li>
-      <li>Steamed carrots</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day5" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 5</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Protein shake (1.5 scoops plant protein + almond milk + berries)</li>
-      <li>Oats + chia seeds</li>
+      <li>Protein shake (plant protein + almond milk + berries)</li>
+      <li>Lentil & vegetable soup with whole grain bread</li>
+      <li>Tempeh stir-fry with quinoa and roasted zucchini</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Lentil and vegetable soup (1.5 cups cooked lentils)</li>
-      <li>Whole grain bread (2 slices)</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Tempeh stir-fry (150g)</li>
-      <li>Quinoa (1 cup cooked)</li>
-      <li>Roasted zucchini</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day6" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1525351484163-7529414344d8?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 6</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Greek yogurt (200g) + granola + walnuts</li>
+      <li>Greek yogurt with granola and walnuts</li>
+      <li>Chickpea curry with brown rice</li>
+      <li>Paneer and spinach sauté with couscous and broccoli</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Chickpea curry (1.5 cups cooked chickpeas)</li>
-      <li>Brown rice (1.5 cups cooked)</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Paneer and spinach sauté (150g paneer)</li>
-      <li>Couscous (1 cup cooked)</li>
-      <li>Steamed broccoli</li>
-    </ul>
-  </section>
+  </div>
+</section>
 
-  <section>
+<section id="day7" class="day" style="--bg-image: url('https://images.unsplash.com/photo-1528756514091-ef2726fc39b2?auto=format&fit=crop&w=1400&q=80');">
+  <div class="content">
     <h2>Day 7</h2>
-    <h3>Breakfast</h3>
     <ul>
-      <li>Protein shake (1.5 scoops plant protein + almond milk + banana)</li>
-      <li>Whole grain toast + almond butter (2 tbsp)</li>
+      <li>Protein shake (plant protein + almond milk + banana)</li>
+      <li>Whole grain toast with almond butter</li>
+      <li>Black bean and corn salad with bulgur wheat</li>
+      <li>Tofu stir-fry with brown rice and mixed veggies</li>
     </ul>
-    <h3>Lunch</h3>
-    <ul>
-      <li>Black bean and corn salad (1.5 cups cooked black beans)</li>
-      <li>Bulgur wheat (1.5 cups cooked)</li>
-    </ul>
-    <h3>Dinner</h3>
-    <ul>
-      <li>Tofu stir-fry (150g tofu)</li>
-      <li>Brown rice (1 cup cooked)</li>
-      <li>Mixed steamed vegetables</li>
-    </ul>
-  </section>
+  </div>
+</section>
+
+<script>
+  // Setup parallax effect for backgrounds
+  function parallaxEffect() {
+    const sections = document.querySelectorAll('section.day');
+    sections.forEach(section => {
+      const rect = section.getBoundingClientRect();
+      const speed = 0.3;
+      // translateY negative to move background slower than scroll
+      const offset = Math.min(Math.max(-rect.top * speed, -100), 100);
+      section.style.setProperty('--bg-translate', `${offset}px`);
+      // Apply background translate transform
+      const bg = section.querySelector('::before');
+    });
+  }
+
+  // Fade in content on scroll
+  function revealOnScroll() {
+    const contents = document.querySelectorAll('.content');
+    const triggerBottom = window.innerHeight * 0.8;
+    contents.forEach(content => {
+      const top = content.getBoundingClientRect().top;
+      if (top < triggerBottom) {
+        content.classList.add('visible');
+      } else {
+        content.classList.remove('visible');
+      }
+    });
+  }
+
+  // Handle nav dot active state based on scroll
+  function updateNavActive() {
+    const navLinks = document.querySelectorAll('nav a');
+    const sections = Array.from(navLinks).map(link => document.querySelector(link.getAttribute('href')));
+    let activeIndex = 0;
+
+    sections.forEach((section, index) => {
+      const rect = section.getBoundingClientRect();
+      if (rect.top <= window.innerHeight / 2 && rect.bottom > window.innerHeight / 2) {
+        activeIndex = index;
+      }
+    });
+
+    navLinks.forEach((link, i) => {
+      if(i === activeIndex) {
+        link.classList.add('active');
+      } else {
+        link.classList.remove('active');
+      }
+    });
+  }
+
+  // Set background images with parallax layering using ::before pseudo-element via JS
+  document.querySelectorAll('section.day').forEach(section => {
+    const bgImage = section.style.getPropertyValue('--bg-image');
+    const beforeStyle = document.createElement('style');
+    beforeStyle.textContent = `
+      #${section.id}::before {
+        background-image: ${bgImage};
+        transform: translateY(0);
+      }
+    `;
+    document.head.appendChild(beforeStyle);
+  });
+
+  window.addEventListener('scroll', () => {
+    revealOnScroll();
+    updateNavActive();
+    // Parallax backgrounds handled by CSS only
+  });
+
+  window.addEventListener('load', () => {
+    revealOnScroll();
+    updateNavActive();
+  });
+</script>
+
 </body>
 </html>
